<?xml version="1.0"?>
<package format="2">
  <name>velodyne_multi_laserscan</name>
  <version>0.0.1</version>
  <description>Collapse multiple rings of a point cloud into a single laser scan</description>

  <maintainer email="VorpalBlade@users.noreply.github.com">Arvid Norlander</maintainer>
  <author email="VorpalBlade@users.noreply.github.com">Arvid Norlander</author>
  <!-- Original authors: Based on code from velodyne_laserscan -->
  <author>Micho Radovnikovich</author>
  <author>Kevin Hallenbeck</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>
</package>
